# regi-estate-japan-demo

./: Anchor.toml  Cargo.toml  LICENSE  README.md  README_ja.md  package.json  tsconfig.json
app/: next.config.ts  package-lock.json  package.json
app/app/: layout.tsx
app/app/api/build-thaw/: route.ts
app/components/: DemoPage.tsx  DistributorStatus.tsx  InvestorPanel.tsx  IssuerPanel.tsx  MintPanel.tsx  TransferPanel.tsx  WalletProvider.tsx
app/lib/: config.ts
app/lib/idl/: dividend_distributor.json  dividend_distributor.ts
clients/js/src/: index.ts
programs/dividend-distributor/: Cargo.toml
programs/dividend-distributor/src/: lib.rs
scripts/: .abl-config  .acl-config  .mint-address  01-create-mint.ts  02-setup-token-acl.ts  03-setup-abl-gate.ts  04-kyc-approve.ts  05-create-ata-and-thaw.ts  abl-gate-compat.ts  codama.ts  shared.ts
tests/: regi-estate-japan.ts
